# C-Language-Course

./: CMakeLists.txt
HW1/: Makefile  exe.c  exe.h  general.c  general.h  hw1  main.c  q1.c  q1.h  q2.c  q2.h  q3.c  q3.h
HW3/: CMakeLists.txt  GlobalAirportDatabase.xlsx  HW3_10010_2020B.docx  airline.c  airline.h  airport.c  airport.h  airport_authority.txt  airport_manager.c  airport_manager.h  binary_search.c  binary_search.h  compare.c  compare.h  flight.c  flight.h  functions.c  functions.h  main.c
HW4/: CMakeLists.txt  HW4_10010_2020B.docx
Lab1/: Makefile  functionsLab1.c  functionsLab1.h  main.c
Lab12_Generic/: Lab_12_LinkedList.doc  Person.c  Person.h
Lab12_Q/: CMakeLists.txt  Q.c  Q.h  list.c  main.c
Lab2/: Lab_02.docx  arrays.c  arrays.h  exe.c  functionsLab2  functionsLab2.c  functionsLab2.h  makefile  prog.c
Lab3/: Makefile  exe.c  exe.h  func.c  func.h  lab3  main.c
Lab4/: Lab_04.docx  Makefile  array.c  array.h  lab4  main.c
Lab5/: Lab_05.docx  Makefile  exe.c  exe.h  functions.c  functions.h  main.c
Lab6/: Lab06_Struct.docx  Makefile  address.c  address.h  main.c  person.c  person.h
Lab7/: Lab07__DynamicAlloction.docx  Makefile  exe.c  exe.h  functions.c  functions.h  main.c
Lab7B/: Lab07B__DynamicStruct.docx  Makefile  building.c  building.h  family.c  family.h  main.c
Lab8/: CMakeLists.txt  Lab08_TextFiles.docx  Makefile  afeka.txt  building.c  building.h  family.c  family.h  main.c
Lab9/: lab_Binary_files_funcPtr.doc  main.c  q1.c  q1.h  q2.c  q2.h  student.c  student.h
lab1/: Lab_01.docx  functionsLab1  functionsLab1.c  (+2 more)
(+2 files in other folders)
